Fixed image size problem and the alignment problem
By making the figure elements flexboxs, and using box model properties like margin and padding instead of wrapping the whole page in a flexbox

--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,13 @@ body {
   font-family: Helvetica;
   font-size: 22px;
   color: seashell;
-  background-color: white;
+  background-color: black;
   opacity: 0.9;
 }
 
 main {
   margin-left: 20px;
   margin-right: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
 }
 
 #mission-container {
@@ -22,7 +18,6 @@ main {
   background-position: center;
   background-repeat: no-repeat;
   height: 700px;
-  width: 2000px;
   display: flex;
   align-items: center;
 }
@@ -34,15 +29,29 @@ main {
 }
 
 #tea-otm {
-  max-width: 1000px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: auto;
+  padding: 50px;
 }
 
 #tea-grid {
   display: flex;
-  flex-flow: row wrap;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-#tea-grid > figure {
-  max-height: 200px;
-  max-width: 300px;
+#tea-grid figure {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#tea-grid figure img {
+  height: 200px;
+  width: 300px;
+  padding: 10px;
 }
